[package]
name = "AITrading"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
once_cell = "1.19"
totp-rs = { version = "5.7.0", features = ["otpauth", "zeroize", "gen_secret"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
urlencoding = "2.1.3"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
humantime-serde = "1.1"
log = "0.4"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
base32 = "0.4"
rand = "0.8"
